# edu-platform

./: .gitignore  README.md
auth-service/: pyproject.toml
auth-service/app/: main.py
auth-service/app/api/: crud.py  deps.py
auth-service/app/api/actions/: auth.py  user.py
auth-service/app/bg_tasks/: conf.py
auth-service/app/core/: config.py  db.py  repository.py
auth-service/app/models/: __init__.py  user.py
auth-service/app/schemas/: token.py  user.py
auth-service/app/utils/: hasher.py
auth-service/migrations/: env.py
auth-service/migrations/versions/: 129137ad244b_init.py  e3ce4ee6285b_added_password_column.py
